# bioswarm-simulation

./: CMakeLists.txt  CMakeUserPresets.json  README.md
config/: optimized_parameters.json  optimized_parameters_wrt_real.json  reference_trajectory_006.csv  reference_trajectory_011.csv
include/mrs_multirotor_simulator/: uav_system_ros.h
include/mrs_multirotor_simulator/uav_system/: multirotor_model.hpp  uav_system.hpp
include/mrs_multirotor_simulator/uav_system/controllers/: acceleration_controller.hpp  attitude_controller.hpp  mixer.hpp  pid.hpp  position_controller.hpp  rate_controller.hpp  velocity_controller.hpp
scripts/: fixed_optimization_wrt_real.py  fixed_wing_optmizer.py  opt_utils.py  optimize_dynamic.py  optimize_fixed.py  optimize_leaderless.py  run_fixed_wing.py  run_sim.py  sim_fixed_wing.py
src/: .clang-format  controller.hpp  controller_fixed.hpp  main.cpp  main_fixed.cpp  params.hpp
